# emblem

./: .clang-format  .clang-tidy.in  .gdbinit  .gitignore  .gitmodules  .lua-format  .rustfmt.toml  .travis.yml  .wokeignore  404.html  Cargo.toml  Makefile.am  Makefile.am.in  PKGBUILD.m4  README.md  SUMMARY.md.in  api.html  asdf.em  build.rs  check_bats.sh  configure.scan.awk  directives.html  em.yml  em.yml.in  example-bib.yml  example.em  expressions.html  extension-api.html  how-emblem-works.html  included-file.em  index.html  internal-api-module-interfaces.html  internal-api-module-internals.html  internal-api.html  introduction.html  libtool  license-and-author-notes.html  print.html  searchindex.js  searchindex.json  (+1 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml
arg_parser/: Cargo.toml
arg_parser/src/: lib.rs
check/bats/: args.bats  common.bash  directives.bats  em.bats  syntax.bats
check/data/: array.c  cmp.c  deque.c  either.c  hash.c  list-array-conversions.c  list.c  map.c  maybe.c  str.c  unit.c
check/doc-struct/: doc-ast.c
check/measurement/: measurement.c
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: args.rs  explain.rs  init.rs  lib.rs  repo.rs  util.rs
core/src/lint/: mod.rs
core/src/log/: mod.rs
core/src/log/messages/: newline_in_attrs.rs  newline_in_inline_arg.rs  unclosed_comments.rs
crates/arg_parser/: Cargo.toml
crates/arg_parser/src/: add_cmd.rs  arg_path.rs  build_cmd.rs  command.rs  explain_cmd.rs  ext_arg.rs  format_cmd.rs  init_cmd.rs  input_args.rs  lib.rs  lint_cmd.rs  list_cmd.rs  log_args.rs  lua_args.rs  output_args.rs  resource_limit.rs  sandbox_level.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: error.rs  main.rs  manifest.rs  pretty_logger.rs  result.rs
crates/cli/src/init/: mod.rs
crates/emblem_core/: Cargo.toml  build.rs
crates/emblem_core/src/: args.rs  context.rs  error.rs  explain.rs  lib.rs  path.rs  repo.rs  result.rs  version.rs
crates/emblem_core/src/ast/: debug.rs  mod.rs  parsed.rs  repr_loc.rs  text.rs
crates/emblem_core/src/context/: dependency.rs  file_content.rs  file_name.rs  mod.rs  module.rs  resource_limit.rs  resources.rs
crates/emblem_core/src/extensions/: em.rs  env_extras.rs  global_sandboxing.rs  lua_restrictions.rs  mod.rs  preload_decls.rs  preload_sandboxing.rs  sandbox.rs
crates/emblem_core/src/extensions/yuescript/: base.yue  em.yue  utf8.yue
crates/emblem_core/src/lint/: mod.rs
crates/emblem_core/src/lint/lints/: attr_ordering.rs  command_naming.rs  duplicate_attrs.rs  emph_delimiters.rs  empty_attrs.rs  mod.rs  num_args.rs  num_attrs.rs  num_pluses.rs  spilt_glue.rs  sugar_usage.rs
crates/emblem_core/src/log/: batch_logger.rs  mod.rs  note.rs  src.rs  verbosity.rs
crates/emblem_core/src/log/messages/: delimiter_mismatch.rs  empty_disambiguator.rs  empty_qualifier.rs  extra_comment_close.rs  extra_dots_in_command_name.rs  heading_too_deep.rs  mod.rs  newline_in_attrs.rs  newline_in_emph_delimiter.rs  newline_in_inline_arg.rs  no_such_error_code.rs  too_many_disambiguators.rs  too_many_qualifiers.rs  unclosed_comments.rs  unclosed_verbatim.rs  unexpected_char.rs  unexpected_eof.rs  unexpected_heading.rs  unexpected_token.rs
crates/emblem_core/src/parser/: error.rs  lexer.rs  location.rs  mod.rs  parser.lalrpop  point.rs  verbatim_block_content.rs
crates/rc_chunk_allocator/: Cargo.toml
crates/yuescript/: Cargo.toml  build.rs
crates/yuescript/src/: compile.lua  lib.rs
crates/yuescript_src/: Cargo.toml  build.rs
directives/: abs.html  add.html  all.html  anchor-and-ref.html  any.html  bib-and-cite.html  call.html  case.html  curr-version.html  def.html  defined.html  div.html  echo.html  env.html  equality.html  error.html  exists.html  expr.html  for.html  foreach.html  get-var.html  h1-6.html  help.html  idiv.html  if.html  impl.html  include.html  inequalities.html  known-directives.html  mod.html  mul.html  not.html  pow.html  readline.html  set-var.html  sign.html  sub.html  system.html  toc.html  undef.html  (+4 more)
directives/expl/: arithmetic.html  boolean.html  document-structure.html  flow-control.html  logging.html  logic.html  misc.html  references.html
docs/: .gitignore  404.md  Doxyfile  README.md  book.toml  book.toml.in  conf.py
docs/old/: Doxyfile  README.md  index.rst
docs/src/: NEW_MODULE  SUMMARY.md  SUMMARY.md.in  advanced-document-styling.md  api.md  controlling-the-typesetting-loop.md  directives.md  expressions.md  extension-api.md  extensions.md  how-emblem-works.md  internal-api-module-interfaces.md  internal-api-module-internals.md  internal-api.md  introduction.md  license-and-author-notes.md  syntactic-sugar.md  writing-input-drivers.md  writing-output-drivers.md
docs/theme/: index.hbs
examples/: example.em
modules/c/: data.html  doc-struct.html  drivers.html  ext.html  logs.html  parser.html  pp.html  style.html  typesetter.html
modules/h/: data.html  doc-struct.html  drivers.html  ext.html  logs.html  parser.html  pp.html  style.html  typesetter.html
modules/moon/: std.in.html  std.out.html
old-src/data/: array.c  array.h  cmp.c  either.c  either.h  list-array-conversions.c  list.c  list.h  locked.h  map.c  maybe.c
old-src/doc-struct/: ast.c  discern-pars.h
old-src/drivers/: driver-util.h  drivers.h
old-src/ext/: debug.h  ext-env.h  ext-loader.h  ext-params.h  lua-constants.h  lua-em-parser.h  lua-lib-load.h  lua.h  setting-io.h
old-src/logs/: ext-log.c
old-src/parser/: sanitise-word.h
old-src/pp/: assert.h  lambda.c  (+4 more)
scripts/: Makefile.am.sh  arggen  autogen  bin2c.lua  changelog.sh  check_bats.sh  clang-tidy-info.sh  clang-tidy.sh  compgen  compgen.moon  configure.scan.awk  configure.scan.awk.in  configure.scan.awk.sh  docgen  doxcov  ext-constants  ext-lib-load.c.sh  lintable-srcs.sh  linting-line-filter.awk  lua-constants  lua-lib-load.c.sh  mangen  module_name  moon-module-make.awk  moon-po-lin  moon2c  pkggen
src/: args.rs  em.c  explain.rs  ext-constants.yml  init.rs  lib.rs  main.rs  repo.rs
(+305 files in other folders)
