[package]
name = "emblem"
authors = [ "kcza" ]
description = "A minimalist, format-agnostic typesetter"
documentation = "https://kcza.net/emblem"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "em"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "2.0.0"
git2 = { version = "0.16.1" }
supports-color = "1.3.1"
lalrpop = "0.19.8"
lalrpop-util = "0.19.8"
tempfile = "3.3.0"
regex = "1"
lazy_static = "1.4.0"
typed-arena = "2.0.1"

[build-dependencies]
clap = { version = "4.0.12", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "2.0.0"
clap_complete = "4.0.2"
clap_mangen = "0.2.2"
supports-color = "1.3.1"
lalrpop = "0.19.8"
tempfile = "3.3.0"
