[package]
name = "emblem"
authors = [ "kcza" ]
description = "A minimalist, format-agnostic typesetter"
documentation = "https://kcza.net/emblem"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.0.0"
edition = "2021"

[workspace]
members = [
	"crates/cli",
	"crates/arg_parser",
	"crates/emblem_core",
]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
