[package]
name = "cli"
authors = [ "kcza" ]
description = "A minimalist, format-agnostic typesetter"
documentation = "https://kcza.net/emblem"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "em"
path = "src/main.rs"

[dependencies]
emblem_core = { path = "../core" }
arg_parser = { path = "../arg_parser" }

[build-dependencies]
arg_parser = { path = "../arg_parser" }
clap = { version = "4.0.12", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.0.2"
clap_mangen = "0.2.2"
