[package]
name = "emblem_core"
authors = [ "kcza" ]
description = "A minimalist, format-agnostic typesetter"
documentation = "https://kcza.net/emblem"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = { version = "0.9.1", features = ["color"] }
derive-new = "0.5.9"
git2 = "0.16.1"
lalrpop = "0.19.8"
lalrpop-util = "0.19.8"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
regex = "1"
typed-arena = "2.0.1"

[build-dependencies]
lalrpop = "0.19.8"

[dev-dependencies]
tempfile = "3.3.0"
pretty_assertions = "1.3.0"
