[package]
name = "cli"
authors = ["kcza"]
description = "A minimalist, format-agnostic typesetter"
documentation = "https://kcza.net/emblem"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "em"
path = "src/main.rs"

[dependencies]
annotate-snippets = { version = "0.9.1", features = ["color"] }
arg_parser = { path = "../arg_parser" }
derive-new = "0.5.9"
derive_builder = "0.12.0"
emblem_core = { path = "../emblem_core" }
git2 = "0.16.1"
indoc = "2.0.4"
itertools = "0.10.5"
sealed = "0.5.0"
serde = { version = "1.0.154", features = ["derive"] }
strum = "0.25.0"
thiserror = "1.0.49"
toml_edit = { version = "0.20.2", features = ["serde"] }
typed-arena = "2.0.1"

[build-dependencies]
arg_parser = { path = "../arg_parser" }
clap = { version = "4.0.12", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.0.2"
clap_mangen = "0.2.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
regex = "1.7.1"
tempfile = "3.3.0"
