[package]
name = "emblem_core"
authors = ["kcza"]
description = "A minimalist, format-agnostic typesetter"
documentation = "https://kcza.net/emblem"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.0.0"
edition = "2021"

[features]
default = ["git2"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
derive-new = "0.5.9"
derive_more = "0.99.17"
git2 = { version = "0.16.1", optional = true }
indoc = "2.0.1"
itertools = "0.11.0"
kinded = "0.3.0"
lalrpop = "0.19.8"
lalrpop-util = "0.19.8"
lazy_static = "1.4.0"
mlua = { version = "0.8.8", features = ["luajit52", "vendored"] }
num = "0.4.0"
once_cell = "1.18.0"
parking_lot = "0.12.1"
phf = { version = "0.11.1", features = ["macros"] }
regex = "1"
sealed = "0.5.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
thiserror = "1.0.48"
uniquote = "3.3.0"
yuescript = { path = "../yuescript" }

[build-dependencies]
lalrpop = "0.19.8"
yuescript = { path = "../yuescript" }

[dev-dependencies]
tempfile = "3.3.0"
pretty_assertions = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.74"
