[package]
name = "yuescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
mlua = { version = "0.8", features = [ "luajit52", "vendored", "macros" ] }
thiserror = "1.0"

[build-dependencies]
cc = "1.0"
